# ChandraGen

./: .gitignore  Dockerfile  README.md  TODO.txt  User Documentation.md  converter.py  env.example  example-docker-compose.yml  example_config.toml  line_converters.py  notes.txt  peridot_draft_specification.md  pyproject.toml  stress_test.toml
chandragen/: __init__.py  __main__.py  converter.py  line_formatters.py  shell.py  types.py
chandragen/db/: __init__.py
chandragen/db/controllers/: job_queue.py
chandragen/db/models/: config.py  job_queue.py
chandragen/formatters/: __init__.py  document_preprocessors.py  line_formatters.py  multiline_formatters.py  registry.py  types.py
chandragen/jobs/: __init__.py  pooler.py  runners.py  scheduler.py  types.py
chandragen/jobs/runners/: __init__.py  converter.py  formatter.py
chandragen/plugins/: __init__.py  example_plugin.py
