[project]
name = "chandragen"
packages = [
    { include = "chandragen"}
]
version = "0.0.0"
description = "A configurable and extensible SSG framework for the gemini protocol"
authors = [
    {name = "thanos",email = "thanos@allthingslinux.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "toml (>=0.10.2,<0.11.0)",
    "apscheduler (>=3.11.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chandragen = "chandragen.__main__:main"

[tool.poetry.dependencies]
python = ">=3.13.2,<3.14"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=4.0.0"
pyright = ">=1.1.358"
ruff = ">=0.8.0"
poetry-types = "^0.6.0"


[tool.ruff]
exclude = [".venv", "typings/**"]
indent-width = 4
line-length = 120
target-version = "py313"

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = ["ALL"]
ignore = ["E501", "N814", "PLR0913", "PLR2004"]
select = [
  "I",     # isort
  "E",     # pycodestyle-error
  "F",     # pyflakes
  "PERF",  # perflint
  "N",     # pep8-naming
  "TRY",   # tryceratops
  "UP",    # pyupgrade
  "FURB",  # refurb
  "PL",    # pylint
  "B",     # flake8-bugbear
  "SIM",   # flake8-simplify
  "ASYNC", # flake8-async
  "A",     # flake8-builtins
  "C4",    # flake8-comprehensions
  "DTZ",   # flake8-datetimez
  "EM",    # flake8-errmsg
  "PIE",   # flake8-pie
  "Q",     # flake8-quotes
  "RET",   # flake8-return
  "PTH",   # flake8-use-pathlib
  "INP",   # flake8-no-pep420
  "RSE",   # flake8-raise
  "ICN",   # flake8-import-conventions
  "RUF",   # ruff
]
unfixable = []

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.pyright]
defineConstant = { DEBUG = true }
enableReachabilityAnalysis = true
exclude = [
  "__pypackages__",
  "_build",
  "examples",
  "tests",
  ".archive",
  "typings/**",
]
ignore = [".venv"]
include = ["chandragen"]
stubPath = "typings"
pythonPlatform = "Linux"
pythonVersion = "3.13"
reportImportCycles = true
strictDictionaryInference = true
strictListInference = true
strictSetInference = true
typeCheckingMode = "strict"
venv = ".venv"
venvPath = "."